--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primeng": "^17.3.3",
     "rxjs": "^6.5.3",
     "tslib": "2.3.0",
